2023-11-04T04:06:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6752660784 # 4104
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2874 / 0 2875 / +0 +1

2023-11-03T00:29:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6739767399 # 4097
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2873 / 0 2874 / +0 +1

2023-11-02T16:07:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6735218397 # 4095
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-02
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2869 / 0 2873 / +0 +4

2023-11-01T20:06:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6724539193 # 4090
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-01
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2867 / 0 2869 / +0 +2

2023-11-01T00:31:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6714038747 # 4085
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-01
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2866 / 0 2867 / +0 +1

2023-10-31T08:08:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6703704061 # 4081